--- a/boba/html/insert.html
+++ b/boba/html/insert.html
@@ -27,9 +27,6 @@
                 <button type="submit">Analyze Your Towers</button>
             </form>
             <div id="upload-status">
-                {% if upload_message %}
-                    <p>{{ upload_message }}</p>
-                {% endif %}
             </div>
         </section>
     </main>
@@ -38,5 +35,7 @@
         <p>Lana Tran | <a href="https://www.linkedin.com/in/lana-tran-pie/">LinkedIn</a></li> | <a href="https://github.com/Pieisawesome/WeHack25#">GitHub</a>
         </p>
     </footer>
+    <script>
+    </script>
 </body>
 </html>
