--- a/boba/html/index.html
+++ b/boba/html/index.html
@@ -21,10 +21,10 @@
     <main>
         <section id="home-section">
             <h2>Welcome to Your Tower Analysis!</h2>
-            <p>This application allows you to upload images of cell towers, analyze them using AI, and view the uploaded images in a gallery.</p>
+            <p>Upload images of your local cell towers and we analyze them! View the uploaded images in a gallery and see their rating.</p>
             <ul>
-                <li>Go to the <a href="/insertPage.html">Upload Image</a> page to submit photos for analysis.</li>
-                <li>Visit the <a href="/galleryPage.html">Gallery</a> to see all the uploaded images.</li>
+                <li>Go to the <a href="./insert.html">Upload Image</a> page to submit photos.</li>
+                <li>Visit the <a href="./gallery.html">Gallery</a> to see all types of towers and antennas.</li>
             </ul>
         </section>
     </main>
