--- a/boba/html/profile.html
+++ b/boba/html/profile.html
@@ -19,30 +19,33 @@
     <main>
         <h1>Tower Profile: {{ tower_id }}</h1>
         <div class="image-gallery">
-            {% for image in images %}
-                <div class="gallery-item">
-                    <img src="/uploads/{{ tower_id }}/{{ image }}" alt="Tower Image" style="max-width: 300px;">
-                </div>
-            {% endfor %}
+            <div class="gallery-item">
+                <img src="/uploads/{{ tower_id }}/${image}" alt="Tower Image" style="max-width: 300px;">
+            </div>
         </div>
 
-        {% if analysis_results %}
-            <h2>Analysis Results</h2>
-            {% for result in analysis_results %}
-                <div class="analysis-result">
-                    <pre>{{ result.analysis }}</pre>
-                </div>
-            {% endfor %}
-        {% else %}
-            <p>No analysis results available for this tower.</p>
-        {% endif %}
+        <h2>Analysis Results</h2>
+        <div class="analysis-result" id="analysis-results-container">
+        </div>
+        <p>No analysis results available for this tower.</p>
 
-        <p><a href="/gallery.html">Back to Gallery</a></p>
+        <p><a href="./gallery.html">Back to Gallery</a></p>
     </main>
 
     <footer>
         <p>Lana Tran | <a href="https://www.linkedin.com/in/lana-tran-pie/">LinkedIn</a></li> | <a href="https://github.com/Pieisawesome/WeHack25#">GitHub</a>
         </p>
     </footer>
+    <script>
+        const analysisResults = JSON.parse('{{ analysis_results }}');
+        const container = document.getElementById('analysis-results-container');
+
+        analysisResults.forEach(result => {
+            const resultDiv = document.createElement('div');
+            resultDiv.className = 'analysis-result';
+            resultDiv.innerHTML = `<pre>${result.analysis}</pre>`;
+            container.appendChild(resultDiv);
+        });
+    </script>
 </body>
 </html>
