--- a/boba/html/analysis_results.html
+++ b/boba/html/analysis_results.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Own Tower Analysis</h1>
+        <h1>Find Hot Signals In Your Area: <br>Cell Phone Tower</h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
