--- a/boba/html/index.html
+++ b/boba/html/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Own Tower Analysis</title>
+    <title>Hot Signals</title>
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
     <header>
-        <h1>Your Own Tower Analysis</h1>
+        <h1>Find Hot Signals In Your Area: <br>Cell Phone Tower</h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
@@ -20,7 +20,7 @@
 
     <main>
         <section id="home-section">
-            <h2>Welcome to Your Tower Analysis!</h2>
+            <h2>Welcome to Hot Signals!</h2>
             <p>Upload images of your local cell towers and we analyze them! View the uploaded images in a gallery and see their rating.</p>
             <ul>
                 <li>Go to the <a href="./insert.html">Upload Image</a> page to submit photos.</li>
