--- a/boba/html/insert.html
+++ b/boba/html/insert.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Own Tower Analysis</h1>
+        <h1>Find Hot Signals In Your Area: <br>Cell Phone Tower</h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
@@ -21,7 +21,7 @@
     <main>
         <section id="upload-section">
             <h2>Analyze Your Towers</h2>
-            <p>Upload images of your cell towers for analysis.</p>
+            <p>Upload images of your cell towers.</p>
             <form id="upload-form" action="/upload" method="POST" enctype="multipart/form-data">
                 <input type="file" id="image-input" name="images" accept="image/*" multiple required>
                 <button type="submit">Analyze Your Towers</button>
