--- a/boba/html/profile.html
+++ b/boba/html/profile.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Own Tower Analysis</h1>
+        <h1>Find Hot Signals In Your Area: <br>Cell Phone Tower</h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
@@ -17,7 +17,11 @@
     </header>
 
     <main>
-        <h1>Tower Profile: {{ tower_id }}</h1>
+        <h1>
+        <script>
+        print("Tower Profile: " ${number})
+        </script>
+        </h1>
         <div class="image-gallery">
             <div class="gallery-item">
                 <img src="/uploads/{{ tower_id }}/${image}" alt="Tower Image" style="max-width: 300px;">
