--- a/boba/html/gallery.html
+++ b/boba/html/gallery.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Own Tower Analysis</h1>
+        <h1>Find Hot Signals In Your Area: <br>Cell Phone Tower </h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
@@ -22,6 +22,13 @@
         <section id="gallery-section">
             <h2>Tower Gallery</h2>
             <div class="gallery-grid" id="tower-gallery">
+            </div>
+            <div>
+                <a href="profile.html">
+                <img src ='../uploads/1/image.jpg' alt="Verizon Cell Tower" width="100" height="">
+                </a>
+                <br>
+                <p> Tower 1: 3/5 Stars</p>
             </div>
         </section>
     </main>
