--- a/boba/html/gallery.html
+++ b/boba/html/gallery.html
@@ -24,7 +24,7 @@
             <div class="gallery-grid" id="tower-gallery">
             </div>
             <div>
-                <a href="profile.html">
+                <a href="profile.html?tower_id=1">
                 <img src ='../uploads/1/image.jpg' alt="Verizon Cell Tower" width="100" height="">
                 </a>
                 <br>
